--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -3103,14 +3103,22 @@ nouislider{
 .queryPipelineConfig{   	
     &.content-menu{
         max-height: 250px;
-        width: 279px;
+        width: 213px;
         overflow: auto;
         padding: 0;
         background: #FFFFFF;
-        box-shadow: 0px 10px 30px rgba(32, 33, 36, 0.3);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         border-radius: 4px;
-        margin: -24px 0px 0 25px;
+        margin: 0;
         border: 0;
+        padding: 10px 0;
+        .title-main{
+            font-weight: 600;
+            font-size: 10px;
+            line-height: 12px;
+            color: #9AA0A6;
+            padding: 8px 10px;
+        }
         perfect-scrollbar{
             max-height: 200px;
             .ps-content{
@@ -3131,7 +3139,7 @@ nouislider{
             align-items: center;            
             &.nostars{
                 .config_name{
-                    width: 135px;
+                    width: 102px;
                 }
                 &:hover{
                     background: #EFF0F1;
@@ -3156,49 +3164,51 @@ nouislider{
                 &.star{
                     position: absolute;
                     left: 12px;
-                    top: 10px;
+                    top: 12px;
                 }   
                 &.star-black{
                     position: absolute;
                     left: 12px;
-                    top: 10px;
+                    top: 12px;
                     display: none;
                 }             
             }
             .action-icons-data{
                 position: absolute;
-                right: 0;
+                right: 10px;
                 display: none;
                 align-items: center;
                 .edit-black{
-                    width: 36px;
+                    width: 12px;
                     text-align: center;
                     cursor: pointer;
+                    margin-left: 12px;
                 }
                 .clone{
-                    width: 36px;
+                    width: 12px;
                     text-align: center;
                     cursor: pointer;
                 }
                 .delete{
-                    width: 36px;
+                    width: 12px;
                     text-align: center;
                     cursor: pointer;
+                    margin-left: 12px;
                 }
             }
         }
         .create-new{
             background: #FFFFFF;
             border-radius: 2px;
-            margin-top: 2px;
-            padding: 9px 10px;
+            margin: 0px;
+            padding: 5px 10px;
             color: #0D6EFD;
             cursor: pointer;
-            border-top: 1px solid #EFF0F1;
-            padding-left: 13px;
+            border-top: 0px solid #EFF0F1;
             font-weight: normal;
             font-size: 14px;
             line-height: 17px;
+            display: inline-block;
         }
         .edit-name{
             width: 100%;
